# AgentChatBus

./: .cursorindexingignore  .gitignore  .readthedocs.yaml  CONTRIBUTORS.md  ISSUES.md  LICENSE  README.md  debug_agents.txt  github-bump-version.bat  mkdocs.yml  pyproject.toml  temp_kick_admin.py  temp_rotate_token.py  temp_unregister_admin.py  test_out.txt  tmp_query.py  tmp_test_admin_awareness.py
.github/.state/: msg_wait_policy_state.json
.github/workflows/: release.yml
agentchatbus/: README.md
agentchatbus-server/: .gitignore  README.md  package.json
agentchatbus-server/scripts/: prepare-package.mjs  smoke-test.mjs
agentchatbus-ts/: CORRECTION_GROUP1_STATUS.md  GROUP1_AGENT_CAPABILITIES_COMPLETE.md  PHASE1_FIXES_COMPLETE.md  PLAN_UPDATE_SUMMARY.md  QUICKSTART_TEST_MIGRATION.md  README.md  TEST_MIGRATION_PLAN.md  TEST_PROGRESS_REPORT.md  mcp_bus_connect.json  package-lock.json  package.json  tsconfig.json
deprecated_src/python_standalone/: pyproject.toml  requirements.txt  stdio_main.py
deprecated_src/python_standalone/examples/: __init__.py  agent_a.py  agent_b.py
deprecated_src/python_standalone/tests/: __init__.py  _constants.py  conftest.py  test_admin_coordinator_loop.py  test_admin_decision_api.py  test_agent_attention_mechanisms.py  test_agent_capabilities.py  test_agent_registry.py  test_bus_connect.py  test_content_filter_unit.py  test_context_vars.py  test_conv_timeout_unit.py  test_database_safety_contract.py  test_e2e.py  test_http_base_url_contract.py  test_image_flow.py  test_legacy_schema_required_columns.py  test_log_buffer_unit.py  test_mcp_transport_layout.py  test_metrics.py  test_msg_edit.py  test_msg_get.py  test_msg_return_format.py  test_msg_sync_unit.py  test_msg_wait_coordination_prompt.py  test_msg_wait_min_timeout_ab_scenario.py  test_multi_agent_chat_scenarios.py  test_quality_gate.py  test_rate_limit_unit.py  test_reactions_priority.py  test_reply_threading.py  test_search.py  test_search_integration.py  test_structured_metadata.py  test_sysprompt.py  test_thread_pagination.py  test_thread_settings_v2.py  test_thread_templates.py  test_thread_updated_at_migration.py  test_threads_archived.py  (+4 more)
deprecated_src/python_standalone/tools/: check_api_agents.py  inspect_agents.py
dev_notes/: README.md  agent_attention_mechanisms.md  agent_attention_mechanisms_plan.md  bus_connect_msg_wait_flow_v2.md  dev001.tmp.cn.md  dev_bus_connect.cn.md  dev_mcp_tools.cn.md  dev_mcp_tools.en.md  js-backend-rewrite-feasibility.md  msg_wait_fast_return_scenarios.cn.md
doc/: agent_message_sync_proposal.md
docs/: index.md  requirements.txt
examples/: README.md
requirements/: rq002.md  rq002plan.md  rq003_agent_status.md
scripts/: 0.0.0.0restart.bat  README.md  bump-version.mjs  bump-version.ps1  create-release-bundle.mjs  restart-127.0.0.1.sh  restart-standalone-ts-server.bat  restart.sh  restart0.0.0.0.ps1  restart127.0.0.1.ps1  stop.ps1  stop.sh
shared-contracts/: README.md  backend-contract-draft.md  extension-compatibility-checklist-v1.md  http-api-contract-v1.md  mcp-tool-contract-v1.md  mcp-tool-fields-v1.md  parity-test-matrix-v1.md
src/: README.md  config.py  ide_ownership.py  log_buffer.py  main.py  mcp_server.py  thread_creation_service.py
tests/: README.md  conftest.py  test_admin_coordinator_loop.py  test_admin_decision_api.py  test_agent_attention_mechanisms.py  test_agent_capabilities.py  test_agent_registry.py  test_bus_connect.py  test_e2e.py  test_export_markdown.py  test_image_flow.py  test_image_paste.py  test_legacy_schema_required_columns.py  test_metrics.py  test_msg_edit.py  test_msg_get.py  test_msg_return_format.py  test_msg_sync_unit.py  test_msg_wait_coordination_prompt.py  test_multi_agent_chat_scenarios.py  test_reactions_priority.py  test_reply_threading.py  test_search.py  test_search_integration.py  test_security_hardening.py  test_structured_metadata.py  test_thread_pagination.py  test_thread_settings_v2.py  test_thread_templates.py  test_thread_updated_at_migration.py  test_timeout_handling.py  test_upload_hardening.py
vscode-agentchatbus/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  REQUIREMENTS.en.md  REQUIREMENTS.md  agentchatbus-0.1.10.vsix  agentchatbus-0.1.107.vsix  agentchatbus-0.1.11.vsix  agentchatbus-0.1.110.vsix  agentchatbus-0.1.111.vsix  agentchatbus-0.1.112.vsix  agentchatbus-0.1.113.vsix  agentchatbus-0.1.116.vsix  agentchatbus-0.1.117.vsix  agentchatbus-0.1.118.vsix  agentchatbus-0.1.119.vsix  agentchatbus-0.1.12.vsix  agentchatbus-0.1.120.vsix  agentchatbus-0.1.121.vsix  agentchatbus-0.1.122.vsix  agentchatbus-0.1.125.vsix  agentchatbus-0.1.126.vsix  agentchatbus-0.1.127.vsix  agentchatbus-0.1.14.vsix  agentchatbus-0.1.15.vsix  agentchatbus-0.1.17.vsix  agentchatbus-0.1.19.vsix  agentchatbus-0.1.20.vsix  agentchatbus-0.1.29.vsix  agentchatbus-0.1.30.vsix  agentchatbus-0.1.31.vsix  agentchatbus-0.1.32.vsix  agentchatbus-0.1.34.vsix  agentchatbus-0.1.39.vsix  agentchatbus-0.1.4.vsix  agentchatbus-0.1.42.vsix  agentchatbus-0.1.5.vsix  agentchatbus-0.1.55.vsix  agentchatbus-0.1.56.vsix  (+21 more)
web-ui/: README.md  index.html
(+252 files in other folders)
