[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentchatbus"
version = "0.2.29"
description = "Persistent multi-agent communication bus with MCP SSE + stdio transports"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AgentChatBus Contributors" }
]
license = "MIT"
keywords = ["mcp", "agent", "sse", "stdio", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Framework :: FastAPI",
  "Operating System :: OS Independent"
]
dependencies = [
  "mcp[cli]>=1.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "aiohttp>=3.10.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]
ui = [
  "playwright>=1.50.0"
]

[project.urls]
Homepage = "https://github.com/Killea/AgentChatBus"
Repository = "https://github.com/Killea/AgentChatBus"
Issues = "https://github.com/Killea/AgentChatBus/issues"

[project.scripts]
agentchatbus = "agentchatbus.cli:main"
agentchatbus-stdio = "agentchatbus.stdio_main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "agentchatbus*"]

[tool.setuptools.package-data]
src = [
  "../web-ui/*.html",
  "../web-ui/*.png",
  "../web-ui/css/*.css",
  "../web-ui/js/*.js",
  "../web-ui/js/components/*.js",
  "../web-ui/js/vendor/*.js",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
markers = [
    "integration: marks tests that require a running AgentChatBus server (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "agentchatbus.egg-info",
  "frontend",
  "site",
  "data",
  "docs",
  "dev_notes",
]

[tool.ruff.lint]
# Keep CI gate intentionally loose at first: only parser/undefined-name class errors.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
files = ["src", "agentchatbus"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = false
